tests/baselines/reference/checkJsxChildrenProperty3.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    interface IUser {
        Name: string;
    }
    
    interface IFetchUserProps {
        children: (user: IUser) => JSX.Element;
    }
    
    class FetchUser extends React.Component<IFetchUserProps, any> {
        render() {
            return this.state
                ? this.props.children(this.state.result)
                : null;
        }
    }
    
    // Ok
    function UserName0() {
        return (
            <FetchUser>
                { user => (
                    <h1>{ user.Name }</h1>
                ) }
            </FetchUser>
        );
    }
    
    function UserName1() {
        return (
            <FetchUser>
    
                { user => (
                    <h1>{ user.Name }</h1>
                ) }
            </FetchUser>
        );
    }